# cosmic-comp

./: .gitignore  .releaserc.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  Taskfile.yml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yaml  test.yaml
cosmic-comp-config/: Cargo.toml
cosmic-comp-config/examples/: recommend_scale.rs
cosmic-comp-config/src/: lib.rs
cosmic-comp-config/src/output/: comp.rs  mod.rs  scale.rs
data/: 50-agentos-desktop.rules  agentos-compositor.sysusers  agentos-greeter-launch  agentos-session-logout  agentos_greeter_compositor.fc  agentos_greeter_compositor.te  cosmic-comp-global.service  keybindings.ron  voice-mode.ron
data/voice-mode/: chat_app_id  fallback_binding  primary_binding
docs/: PERF_MEASUREMENT.md
examples/: customized-window-decorations.rs
packaging/rpm/: cosmic-comp.spec
pkg/rpm/: cosmic-comp.spec
resources/protocols/: backdrop-color.xml  layer_surface_dismiss.xml  layer_surface_visibility.xml  voice_mode.xml
scripts/: game-mode-env.sh  game-mode-session.conf  game-mode-test.sh
src/: clipboard.rs  comp_theme.rs  hooks.rs  lib.rs  state.rs  theme.rs  toolkit_config.rs  wayland_authz.rs  xwayland.rs
src/backend/: winit.rs  x11.rs
src/backend/kms/: device.rs  drm_helpers.rs  mod.rs  socket.rs
src/backend/kms/surface/: mod.rs  timings.rs
src/backend/render/: blur.rs  clipped_surface.rs  cursor.rs  element.rs  gpu_profiler.rs  mod.rs  perf_badge.rs  shadow.rs  voice_orb.rs
src/backend/render/shaders/: blurred_backdrop.frag  dual_kawase_downsample.frag  dual_kawase_upsample.frag  offscreen.frag  shadow.frag  voice_orb.frag
src/config/: input_config.rs  key_bindings.rs  mod.rs  voice.rs
src/dbus/: game_mode.rs  mod.rs
src/input/: actions.rs  mod.rs
src/logger/: mod.rs
src/perf/: coldstart.rs  mod.rs
src/shell/: auto_hide.rs  ease.rs  layer_open.rs  layer_resize_anim.rs  layer_slide.rs  mod.rs  workspace.rs  zoom.rs
src/shell/element/: header_bar.rs  mod.rs  resize_indicator.rs  stack.rs  stack_hover.rs  surface.rs  swap_indicator.rs  window.rs
src/shell/element/stack/: tab.rs  tab_text.rs  tabs.rs
src/shell/focus/: mod.rs  order.rs  target.rs
src/shell/grabs/: delay.rs  layer_resize.rs  mod.rs  moving.rs
src/shell/grabs/menu/: default.rs  item.rs  mod.rs
src/shell/layout/: mod.rs
src/shell/layout/floating/: mod.rs
src/shell/layout/floating/grabs/: resize.rs
src/shell/layout/tiling/: mod.rs
src/shell/layout/tiling/grabs/: resize.rs
src/utils/: apply.rs  iced.rs  iced_keymap.rs  iced_profiler.rs  mod.rs  process.rs  quirks.rs  xdg_icon.rs
src/utils/iced/: mod.rs
src/wayland/handlers/: animated_resize.rs  backdrop_color.rs  blur.rs  compositor.rs  corner_radius.rs  decoration.rs  dmabuf.rs  exclusive_mode.rs  export_dmabuf.rs  home_visibility.rs  input_method.rs  layer_auto_hide.rs  layer_edge_resize.rs  layer_shell.rs  layer_surface_dismiss.rs  layer_surface_placement.rs  layer_surface_visibility.rs  layer_usable_area.rs  mod.rs  output.rs  output_power.rs  seat.rs  selection.rs  session_lock.rs  surface_embed.rs  tooltip.rs  toplevel_management.rs  voice_mode.rs  xdg_activation.rs  xdg_toplevel_icon.rs
src/wayland/handlers/screencopy/: mod.rs  render.rs
src/wayland/handlers/xdg_shell/: mod.rs  popup.rs
src/wayland/protocols/: animated_resize.rs  backdrop_color.rs  blur.rs  export_dmabuf.rs  home_visibility.rs  layer_auto_hide.rs  layer_corner_radius.rs  layer_edge_resize.rs  layer_surface_dismiss.rs  layer_surface_placement.rs  layer_surface_visibility.rs  layer_usable_area.rs  mod.rs  output_power.rs  overlap_notify.rs  screencopy.rs  surface_embed.rs  tooltip.rs  toplevel_info.rs  toplevel_management.rs  voice_mode.rs
src/wayland/protocols/output_configuration/handlers/: cosmic.rs
