[package]
authors = ["Victoria Brekenfeld"]
edition = "2024"
license = "GPL-3.0-only"
name = "cosmic-comp"
version = "1.29.1"
rust-version = "1.90"

[workspace]
members = ["cosmic-comp-config"]

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
bitflags = "2.11.0"
calloop = { version = "0.14.4", features = ["executor", "stream"] }
cosmic-comp-config = { path = "cosmic-comp-config", features = [
    "libdisplay-info",
    "output",
] }
cosmic-config = { git = "https://github.com/playtron-os/libcosmic.git", features = [
    "calloop",
    "macro",
] }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", rev = "160b086", default-features = false, features = [
    "server",
] }
cosmic-settings-config = { git = "https://github.com/pop-os/cosmic-settings-daemon" }
cosmic-settings-daemon-config = { git = "https://github.com/pop-os/cosmic-settings-daemon", features = [
    "greeter",
] }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git", features = [
    "shape-run-cache",
] }
dirs = "6"
libdisplay-info = "0.3.0"
egui = { version = "0.31.1", optional = true }
egui_plot = { version = "0.31.0", optional = true }
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
iced_core = { git = "https://github.com/playtron-os/iced.git", features = ["advanced"] }
iced_graphics = { git = "https://github.com/playtron-os/iced.git" }
iced_runtime = { git = "https://github.com/playtron-os/iced.git" }
iced_tiny_skia = { git = "https://github.com/playtron-os/iced.git", features = ["svg", "image"] }
iced_widget = { git = "https://github.com/playtron-os/iced.git", features = ["svg", "image", "advanced"] }
icetron-p = { git = "ssh://git@github.com/playtron-os/icetron-p.git" }
icetron-themes = { git = "ssh://git@github.com/playtron-os/icetron-themes.git", features = ["dynamic", "color-mode"] }
image = { version = "0.25", default-features = false, features = ["png"] }
indexmap = "2.13"
keyframe = "1.1.1"
libc = "0.2.177"
libsystemd = { version = "0.7", optional = true }
log-panics = { version = "2", features = ["with-backtrace"] }
notify = "8"
ordered-float = "5.1"
png = "0.18"
regex = "1"
ron = "0.12"
rust-embed = { version = "8.11", features = ["debug-embed"] }
sanitize-filename = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
jiff = "0.2"
tiny-skia = "0.11"
tracing = { version = "0.1.44", features = [
    "max_level_debug",
    "release_max_level_info",
] }
tracing-journald = "0.3.2"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "tracing-log",
] }
tracy-client = { version = "0.18.4", default-features = false }
wayland-backend = "0.3.12"
wayland-scanner = "0.31.8"
xcursor = "0.3.10"
xdg = "^3.0"
xdg-user = "0.2.1"
xkbcommon = "0.9"
zbus = "5.14.0"
memmap2 = "0.9"
profiling = { version = "1.0" }
rustix = { version = "1.1.4", features = ["process"] }
rand = "0.10"
# CLI arguments
clap_lex = "1.0"
parking_lot = "0.12.5"
logind-zbus = { version = "5.3.2", optional = true }
futures-executor = { version = "0.3.32" }
futures-util = "0.3.32"
cgmath = "0.18.0"

[dependencies.id_tree]
branch = "feature/copy_clone"
git = "https://github.com/Drakulix/id-tree.git"

[dependencies.smithay]
git = "https://github.com/playtron-os/smithay.git"
default-features = false
features = [
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_winit",
    "backend_vulkan",
    "backend_x11",
    "desktop",
    "renderer_glow",
    "renderer_multi",
    "renderer_pixman",
    "wayland_frontend",
    "xwayland",
]

[dependencies.smithay-egui]
version = "0.2.0"
features = ["svg"]
optional = true

[features]
debug = ["egui", "egui_plot", "smithay-egui", "anyhow/backtrace"]
default = ["systemd"]
stacking = []
logind = ["logind-zbus"]
systemd = ["libsystemd", "logind"]
profile-with-tracy = ["profiling/profile-with-tracy", "tracy-client/default"]
profile-with-tracy-gpu = ["profile-with-tracy", "smithay/tracy_gpu_profiling"]

[profile.dev.package.tiny-skia]
opt-level = 2

[profile.dev.package.rustybuzz]
opt-level = 2

[profile.dev.package.ttf-parser]
opt-level = 2

[profile.fastdebug]
debug = true
inherits = "release"

[profile.release]
lto = "fat"

[patch."https://github.com/pop-os/cosmic-protocols"]
cosmic-protocols = { git = "https://github.com/playtron-os//cosmic-protocols", rev = "badeb0e" }
[patch."https://github.com/pop-os/libcosmic/"]
cosmic-config = { git = "https://github.com/playtron-os/libcosmic.git" }
cosmic-config-derive = { git = "https://github.com/playtron-os/libcosmic.git" }
cosmic-theme = { git = "https://github.com/playtron-os/libcosmic.git" }
iced_core = { git = "https://github.com/playtron-os/iced.git" }
iced_futures = { git = "https://github.com/playtron-os/iced.git" }
iced_graphics = { git = "https://github.com/playtron-os/iced.git" }
iced_renderer = { git = "https://github.com/playtron-os/iced.git" }
iced_runtime = { git = "https://github.com/playtron-os/iced.git" }
iced_widget = { git = "https://github.com/playtron-os/iced.git" }
[patch."https://github.com/pop-os/cosmic-settings-daemon"]
cosmic-settings-config = { git = "https://github.com/playtron-os/cosmic-settings-daemon" }
[patch.crates-io]
smithay-egui = { git = "https://github.com/Smithay/smithay-egui.git" }
smithay = { git = "https://github.com/playtron-os/smithay.git" }

#[patch."https://github.com/playtron-os/iced.git"]
#iced = { path = "../iced" }
#iced_core = { path = "../iced/core" }
#iced_debug = { path = "../iced/debug" }
#iced_futures = { path = "../iced/futures" }
#iced_graphics = { path = "../iced/graphics" }
#iced_highlighter = { path = "../iced/highlighter" }
#iced_program = { path = "../iced/program" }
#iced_renderer = { path = "../iced/renderer" }
#iced_runtime = { path = "../iced/runtime" }
#iced_tiny_skia = { path = "../iced/tiny_skia" }
#iced_wgpu = { path = "../iced/wgpu" }
#iced_widget = { path = "../iced/widget" }
#iced_winit = { path = "../iced/winit" }

#[patch."ssh://git@github.com/playtron-os/icetron.git"]
#icetron = { path = "../icetron-storybook/vendor/icetron/crates/icetron" }
#icetron_assets = { path = "../icetron-storybook/vendor/icetron/crates/icetron-assets" }
#icetron_utils = { path = "../icetron-storybook/vendor/icetron/crates/icetron-utils" }

#[patch."ssh://git@github.com/playtron-os/icetron-themes.git"]
#icetron-themes = { path = "../icetron-themes/crates/icetron-themes" }
